// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pullquote renders correctly 1`] = `
.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    No time for pessimism.
  </p>
  <footer
    class="c1"
  />
</blockquote>
`;

exports[`Pullquote with German language renders correctly 1`] = `
.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

<blockquote
  class="c0"
  lang="de"
>
  <p>
    Keine Zeit für Pessimismus.
  </p>
  <footer
    class="c1"
  />
</blockquote>
`;

exports[`Pullquote with Japanese language renders correctly 1`] = `
.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

<blockquote
  class="c0"
  lang="ja"
>
  <p>
    悲観の時い
  </p>
  <footer
    class="c1"
  />
</blockquote>
`;

exports[`Pullquote with author and source renders correctly 1`] = `
.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

.c2 {
  font-style: normal;
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    How we spend our days is, of course, how we spend our lives.
  </p>
  <footer
    class="c1"
  >
    <b
      class="c2"
    >
      Annie Dillard
    </b>
    , 
    <cite
      class=""
    >
      The Writing Life
    </cite>
  </footer>
</blockquote>
`;

exports[`Pullquote with author renders correctly 1`] = `
.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

.c2 {
  font-style: normal;
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    How we spend our days is, of course, how we spend our lives.
  </p>
  <footer
    class="c1"
  >
    <b
      class="c2"
    >
      Annie Dillard
    </b>
  </footer>
</blockquote>
`;

exports[`Pullquote with author, source and URL renders correctly 1`] = `
.c3 {
  font-weight: 600;
  color: var(--colorText);
  -webkit-text-decoration-color: var(--colorLink);
  text-decoration-color: var(--colorLink);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration-color: var(--colorLinkActive);
  text-decoration-color: var(--colorLinkActive);
}

.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

.c2 {
  font-style: normal;
}

@supports (not (text-decoration-color:red)) {
  .c3:hover,
  .c3:focus {
    color: var(--colorLink);
  }
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    How we spend our days is, of course, how we spend our lives.
  </p>
  <footer
    class="c1"
  >
    <b
      class="c2"
    >
      Annie Dillard
    </b>
    , 
    <cite
      class=""
    >
      <a
        class="c3"
        font-weight="1"
        href="https://www.goodreads.com/book/show/12530.The_Writing_Life"
      >
        The Writing Life
      </a>
    </cite>
  </footer>
</blockquote>
`;

exports[`Pullquote with source and URL renders correctly 1`] = `
.c2 {
  font-weight: 600;
  color: var(--colorText);
  -webkit-text-decoration-color: var(--colorLink);
  text-decoration-color: var(--colorLink);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c2:hover,
.c2:focus {
  -webkit-text-decoration-color: var(--colorLinkActive);
  text-decoration-color: var(--colorLinkActive);
}

.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

@supports (not (text-decoration-color:red)) {
  .c2:hover,
  .c2:focus {
    color: var(--colorLink);
  }
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    How we spend our days is, of course, how we spend our lives.
  </p>
  <footer
    class="c1"
  >
    <cite
      class=""
    >
      <a
        class="c2"
        font-weight="1"
        href="https://www.goodreads.com/book/show/12530.The_Writing_Life"
      >
        The Writing Life
      </a>
    </cite>
  </footer>
</blockquote>
`;

exports[`Pullquote with source renders correctly 1`] = `
.c0 {
  padding: 1.44rem;
  text-align: center;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0 p {
  font-size: 2.023rem;
  font-weight: 900;
  line-height: 1.0;
  margin: 0;
}

.c0 p:first-child::before {
  content: open-quote;
  font-style: normal;
}

.c0 p:nth-of-type(1):first-letter {
  margin-left: -0.4em;
}

.c0[lang|='de'] p:nth-of-type(1):first-letter {
  margin-left: -0.6em;
}

.c0[lang|='ja'] p:nth-of-type(1):first-letter {
  margin-left: -1em;
}

.c0 p:nth-last-of-type(1)::after {
  content: close-quote;
  font-style: normal;
}

.c1 {
  font-size: 0.773rem;
  font-weight: normal;
  margin-top: 0.833rem;
}

<blockquote
  class="c0"
  lang="en"
>
  <p>
    How we spend our days is, of course, how we spend our lives.
  </p>
  <footer
    class="c1"
  >
    <cite
      class=""
    >
      The Writing Life
    </cite>
  </footer>
</blockquote>
`;
